fix: horizontal grid in the mail view overlap its bottom border

--- a/TelerikMvcWebMail/Content/mail.scss
+++ b/TelerikMvcWebMail/Content/mail.scss
@@ -125,10 +125,6 @@ tbody:empty:before {
         border-bottom: 1px solid #ebebeb;
     }
 
-    .k-grid-content {
-        height: 203px !important; 
-    }
-
     .mail-details-wrapper {
         overflow: auto;
     }
